--- a/src/main/resources/templates/save-promo-confirmation.html
+++ b/src/main/resources/templates/save-promo-confirmation.html
@@ -5,11 +5,15 @@
 <head th:replace="~{fragments::head(title = 'Promocja - aktualizacja')}">
 <body>
 <nav th:replace="~{fragments::login-navbar}"></nav>
-<div class="container">
-    <div class="confirmation">
-        <i class="fa-solid fa-face-smile fa-bounce fa-10x"></i>
-        <h2>Promocja zapisana</h2>
-    </div>
+<main>
+    <div class="container">
+        <div class="confirmation">
+            <i class="fa-solid fa-face-smile fa-bounce fa-10x"></i>
+            <h2>Promocja zapisana</h2>
+        </div>
+
+</main>
+
 </div>
 <footer th:replace="~{fragments::footer}"></footer>
 </body>
