--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -1,24 +1,25 @@
-*{
+* {
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Raleway', sans-serif;
-
-
 }
 
 body {
     max-width: 1200px;
     float: none;
-    background-color: white;
 
 }
 
 .menu {
-    text-align: left;
+    text-align: center;
     display: block;
-    margin: 0 auto;
+    margin-bottom: 10px;
+    margin-inline: 10px;
+    border-radius: 4px;
+
 }
+
 .menu a span {
     flex-wrap: wrap;
 }
@@ -36,23 +37,24 @@ body {
 }
 
 main {
-    background-color: whitesmoke;
-
+    background-color: #6d6d6d;
 }
 
 .menu {
-    background-color: lightgray;
+    background-color: #6d6d6d;
 }
 
-.selected-for-user{
+.selected-for-user {
     text-align: center;
     display: block;
     margin: 0 auto;
 }
+
 .container {
     min-height: 96vh;
 }
-.footer{
+
+.footer {
     text-align: center;
     background-color: #333;
     color: white;
@@ -60,6 +62,7 @@ main {
     bottom: 0;
     width: 100%;
     max-width: 1200px;
+    border-radius: 4px;
 
 }
 
@@ -95,7 +98,27 @@ div a span {
     justify-content: space-between;
     padding: 16px 16px;
     background-color: #333;
+    border-radius: 4px;
 }
+
+.navbar > a:hover {
+    text-align: center;
+    cursor: pointer;
+    color: dodgerblue;
+}
+
+.delete:hover {
+    text-align: center;
+    cursor: pointer;
+    color: red;
+}
+
+.edit:hover {
+    text-align: center;
+    cursor: pointer;
+    color: dodgerblue;
+}
+
 
 .logo {
     color: #FF3B30;
@@ -103,18 +126,20 @@ div a span {
     font-weight: 400;
 }
 
-.login-button,.shopping-cart {
+.login-button, .shopping-cart {
     color: black;
     cursor: pointer;
     border-radius: 4px;
     font-size: 2em;
-    box-shadow:  #FF3B30;
+    box-shadow: #FF3B30;
     transition: 0.4s;
     text-align: center;
 }
+
 .login-button:hover {
     color: #FF3B30;
 }
+
 .search-button:hover {
     color: white;
     background-color: darkorange;
@@ -137,9 +162,9 @@ div a span {
 }
 
 
- .shopping-cart:hover {
-     color: #FF3B30;
- }
+.shopping-cart:hover {
+    color: #FF3B30;
+}
 
 .tiles {
     width: 600px;
@@ -154,8 +179,7 @@ div a span {
 
 
 /* login */
-
-.form button{
+.form button {
     margin-top: 50px;
     width: 100%;
     color: #080710;
@@ -165,14 +189,22 @@ div a span {
     border-radius: 5px;
     cursor: pointer;
 }
+ input::file-selector-button {
+
+    border: #080710;
+    border-radius: 3px;
+    color: black;
+    width: 50%;
+    padding: 1rem 1.25rem;
+    font-family: 'Raleway', sans-serif;
+}
 
 
-
-.form input{
+.form input {
     display: block;
-    height: 50px;
+    height: 60px;
     width: 100%;
-    background-color: rgba(255,255,255,0.07);
+    background-color: rgba(255, 255, 255, 0.07);
     border-radius: 3px;
     padding: 0 10px;
     margin-top: 8px;
@@ -181,32 +213,33 @@ div a span {
 
 }
 
-.form label{
+.form label {
     display: block;
     margin-top: 30px;
     font-size: 16px;
     font-weight: 500;
 }
 
-.form form{
+.form form {
     height: auto;
     width: 600px;
-    background-color: rgba(255,255,255,0.13);
-    position:absolute ;
-    transform: translate(-50%,-50%);
-    top: 45%;
-    left: 50%;
+    background-color: rgba(255, 255, 255, 0.13);
+    position: absolute;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 5%;
     border-radius: 10px;
     backdrop-filter: blur(10px);
-    border: 2px solid rgba(255,255,255,0.1);
-    box-shadow: 0 0 40px rgba(8,7,16,0.6);
+    border: 2px solid rgba(255, 255, 255, 0.1);
+    box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
     padding: 40px 35px;
+    background-color: lightgray;
 }
 form .form-description {
     height: 150px;
     width: 100%;
     resize: none;
-    background-color: rgba(255,255,255,0.07);
+    background-color: rgba(255, 255, 255, 0.07);
     border-radius: 3px;
     padding: 0 10px;
     margin-top: 8px;
@@ -223,11 +256,12 @@ form .form-description {
 }
 
 .discovery-header {
-    margin: 0;
+    margin: 0px;
 }
+
 /* zmiana czcionki "Dodane przez..." */
 .discovery-details {
-    color: #757575;
+    color: darkslategray;
     font-size: 0.8rem;
 }
 
@@ -244,15 +278,13 @@ form .form-description {
     flex-direction: row;
     align-items: center;
     font-size: 1.2rem;
-
-
 }
 
-/* zmieniamy paragraf na element liniowy */
+/*!* zmieniamy paragraf na element liniowy *!
 .discovery-votes {
     display: inline;
     color: #007AFF;
-}
+}*/
 
 /* nadpisanie domyślnych marginesów */
 .discovery-bar > p {
@@ -281,29 +313,6 @@ article {
     max-height: fit-content;
 }
 
-table {
-    table-layout: fixed;
-    width: 80%;
-    border: 3px solid black;
-    border-collapse: collapse;
-}
-thead th {
-    width: 20px;
-}
-th {
-    letter-spacing: 2px;
-    border: 3px solid black;
-
-}
-
-td {
-    letter-spacing: 1px;
-    border: 2px solid black;
-}
-
-tbody td {
-    text-align: center;
-}
 
 .image {
     float: left;
@@ -311,6 +320,7 @@ tbody td {
     height: 300px;
     display: block;
 }
+
 .description {
     overflow: hidden;
 }
@@ -323,13 +333,100 @@ tbody td {
 .confirmation {
     text-align: center;
     position: absolute;
-    top: 30%;
+    top: 20%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
+.description .price {
+    font-weight: bolder;
+    font-size: 18px;
+    color: #FF3B30;
+}
+
+.list-border {
+    margin: auto;
+    list-style: none;
+}
+
+.list-border li > :hover {
+    cursor: pointer;
+    color: dodgerblue;
+}
 
 
+.list-border > li {
+    font-size: 1.2rem;
+    border: 1px #6d6d6d solid;
+    padding: 16px;
+    text-align: center;
+    margin: 2px;
+    border-radius: 4px;
+}
+
+.list-heading {
+    text-align: center;
+    padding: 10px;
+    color: white;
+
+}
+
+.styled-table thead tr {
+    background-color: #333333;
+    color: #ffffff;
+    text-align: center;
+}
 
 
+table {
+    table-layout: fixed;
+    width: 90%;
+    border: 3px solid black;
+    border-collapse: collapse;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
 
+thead th {
+    width: 20px;
+}
+
+
+tbody td {
+    text-align: center;
+}
+
+
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #BDBDBD;
+
+}
+
+.styled-table tbody tr:nth-of-type(odd) {
+    background-color: lightgray;
+}
+
+
+li:nth-child(odd) {
+    background: #BDBDBD;
+}
+
+li:nth-child(even) {
+    background: lightgray;
+}
+
+article:nth-child(odd) {
+    background: #BDBDBD;
+}
+
+article:nth-child(even) {
+    background: lightgray;
+}
