--- a/src/main/resources/templates/all-users.html
+++ b/src/main/resources/templates/all-users.html
@@ -8,25 +8,28 @@
 <body>
 <nav th:replace="~{fragments::login-navbar}">
 </nav>
-<div class="container">
-    <h1>Lista użytkowników</h1>
-<table>
-    <thead>
-    <tr>
-        <th scope="col">Email</th>
-        <th scope="col">Akcja</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="user: ${allUsers}" th:object="${user}">
-        <td th:text="*{email}">Nazwa</td>
-        <td><a th:href="|/admin/user/delete/*{email}|">Usuń</a></td>
-    </tr>
-    </tbody>
-</table>
-</div>
+<main>
+    <div class="container styled-table ">
+        <h2 class="list-heading">Lista użytkowników</h2>
+        <table>
+            <thead>
+            <tr>
+                <th scope="col">Email</th>
+                <th scope="col">Usuwanie</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="user: ${allUsers}" th:object="${user}">
+                <td th:text="*{email}">Nazwa</td>
+                <td><a class="delete" th:href="|/admin/user/delete/*{email}|">Usuń</a></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    </table>
+</main>
+
 <footer th:replace="~{fragments::footer}"></footer>
-</table>
 
 </body>
 </html>
