--- a/src/main/resources/templates/change-password-form.html
+++ b/src/main/resources/templates/change-password-form.html
@@ -8,18 +8,19 @@
 <body>
 <nav th:replace="~{fragments::login-navbar}">
 </nav>
-<h3>Zmiana hasła</h3>
-<div class="form container">
-  <form th:action="@{/user/change-password}" method="post">
-    <label>
-      Wprowadź nowe hasło:
-      <input type="password" name="newPassword" required>
-    </label>
-    <button type="submit">Zmień</button>
-  </form>
-</div>
-<footer th:replace="~{fragments::footer}">
-</footer>
+<main>
+    <div class="form container">
+        <form th:action="@{/user/change-password}" method="post">
+            <label>
+                Wprowadź nowe hasło:
+                <input type="password" name="newPassword" required>
+            </label>
+            <button type="submit">Zmień</button>
+        </form>
+    </div>
+    <footer th:replace="~{fragments::footer}">
+    </footer>
+</main>
 
 </body>
 </html>
