--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -5,15 +5,17 @@
 <head th:replace="~{fragments::head(title = 'Brak uprawnień')}">
 <body>
 <nav th:replace="~{fragments::login-navbar}"></nav>
-<div class="container">
-    <div class="confirmation">
-        <i class="fa-solid fa-ban fa-shake fa-10x"></i>
-        <h2>Brak uprawnień</h2>
+<main>
+    <div class="container">
+        <div class="confirmation">
+            <i class="fa-solid fa-ban fa-shake fa-10x"></i>
+            <h2>Brak uprawnień</h2>
+        </div>
+
     </div>
+</main>
 
 
-
-</div>
 <footer th:replace="~{fragments::footer}"></footer>
 </body>
 </html>
