--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,35 +4,38 @@
 
 </head>
 <body>
-<div class="form container">
-    <nav th:replace="~{fragments::login-navbar}"></nav>
+<main>
+    <div class="form container">
+        <nav th:replace="~{fragments::login-navbar}"></nav>
 
-    <form method="post" th:action="@{/register}" action="#" th:object="${user}">
-        <h3>Panel rejestracji</h3>
-        <label>
-            Imię:
-            <input th:field="*{firstName}" type="text" placeholder="Jan" required>
-            <p class="error" th:errors="*{firstName}"></p>
-        </label>
-        <label>
-            Nazwisko:
-            <input th:field="*{lastName}" type="text" placeholder="Kowalski" required>
-            <p class="error" th:errors="*{lastName}"></p>
-        </label>
-        <label>
-            Email:
-            <input th:field="*{email}" type="email" placeholder="jan.kowalski@abc.pl" required>
-            <p class="error" th:errors="*{email}"></p>
-        </label>
-        <label>
-            Hasło:
-            <input th:field="*{password}" type="password" placeholder="TrudneHasło123" required>
-            <p class="error" th:errors="*{password}"></p>
-        </label>
-        <button type="submit">Rejestruj</button>
+        <form method="post" th:action="@{/register}" action="#" th:object="${user}">
+            <h3>Panel rejestracji</h3>
+            <label>
+                Imię:
+                <input th:field="*{firstName}" type="text" placeholder="Jan" required>
+                <p class="error" th:errors="*{firstName}"></p>
+            </label>
+            <label>
+                Nazwisko:
+                <input th:field="*{lastName}" type="text" placeholder="Kowalski" required>
+                <p class="error" th:errors="*{lastName}"></p>
+            </label>
+            <label>
+                Email:
+                <input th:field="*{email}" type="email" placeholder="jan.kowalski@abc.pl" required>
+                <p class="error" th:errors="*{email}"></p>
+            </label>
+            <label>
+                Hasło:
+                <input th:field="*{password}" type="password" placeholder="TrudneHasło123" required>
+                <p class="error" th:errors="*{password}"></p>
+            </label>
+            <button type="submit">Rejestruj</button>
 
-    </form>
-</div>
+        </form>
+    </div>
+</main>
+
 
 <footer th:replace="~{fragments::footer}"></footer>
 </footer>
