--- a/src/main/resources/templates/save-promo.html
+++ b/src/main/resources/templates/save-promo.html
@@ -5,41 +5,44 @@
 <body>
 <nav th:replace="~{fragments::login-navbar}">
 </nav>
+<main>
+    <div class="form container">
+        <form th:fragment="save-promo-form" method="post" th:action="@{/promo/save}" th:object="${promo}"
+              enctype="multipart/form-data">
+            <label>
+                Nazwa
+                <input th:field="*{name}" type="text" required>
+                <p class="error" th:errors="*{name}">Bład</p>
+            </label>
+            <label>
+                Opis
+                <textarea class="form-description" th:field="*{description}" required>
+                </textarea>
+                <p class="error" th:errors="*{description}">Błąd</p>
+            </label>
+            <label>
+                Cena:
+                <input th:field="*{price}" type="number" min="0.00" placeholder="99.99" step="0.01" required>
+                <p class="error" th:errors="*{price}">Błąd</p>
+            </label>
+            <label>
+                Link do promocji
+                <input th:field="*{urlAddress}" type="url" required>
+                <p class="error" th:errors="*{urlAddress}">Błąd</p>
+            </label>
 
-<div  class="form container">
-<form th:fragment="save-promo-form" method="post" th:action="@{/promo/save}" th:object="${promo}" enctype="multipart/form-data">
-
-    <label>
-        Nazwa
-        <input th:field="*{name}" type="text" required>
-        <p class="error" th:errors="*{name}">Bład</p>
-    </label>
-    <label>
-        Opis
-        <textarea class="form-description" th:field="*{description}" required>
-        </textarea>
-        <p class="error" th:errors="*{description}">Błąd</p>
-    </label>
-    <label>
-        Cena:
-        <input th:field="*{price}" type="number" min="0.00"  placeholder="99.99" step="0.01" required>
-        <p class="error" th:errors="*{price}">Błąd</p>
-    </label>
-    <label>
-        Link do promocji
-        <input th:field="*{urlAddress}" type="url" required>
-        <p class="error"th:errors="*{urlAddress}">Błąd</p>
-    </label>
-    <label th:field="*{category}" th:replace="~{fragments::category}">
-        Kategoria
-    </label>
-    <label>
-        Dodaj zdjęcie
-        <input type="file" th:field="*{imageFilename}" />
-    </label>
-    <button type="submit">Dodaj</button>
-</form>
-</div>
+            <label>
+                Wybierz kategorię
+                <input th:field="*{category}" th:replace="~{fragments::category}">
+            </label>
+            <label for="file_upload">
+                Dodaj zdjęcie
+                <input class="file_upload" id="file_upload" type="file" th:field="*{imageFilename}"/>
+            </label>
+            <button type="submit">Dodaj</button>
+        </form>
+    </div>
+</main>
 <footer th:replace="~{fragments::footer}">
 </footer>
 
