--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -4,17 +4,18 @@
 <head th:replace="~{fragments::head(title = 'Panel użytkownika')}">
 </head>
 <body>
-
-<nav th:replace="~{fragments::login-navbar}">
-</nav>
-<div class="container">
-<h3 th:text="|Witaj ${user.firstName}|"></h3>
-  <ul>
-    <Li sec:authorize="hasRole('USER')"><a href="/user/promo/all">Twoje ogłoszenia</a></Li>
-    <li><a href="#" th:href="@{/user/change-password}">Zmień hasło</a></li>
-  </ul>
-
-</div>
+<main>
+    <nav th:replace="~{fragments::login-navbar}">
+    </nav>
+    <div class="container">
+        <h2 class="list-heading">Panel użytkownika</h2>
+        <h3 class="list-heading" th:text="|Witaj ${user.firstName}|"></h3>
+        <ul class="list-border">
+            <Li sec:authorize="hasRole('USER')"><a href="/user/promo/all">Twoje ogłoszenia</a></Li>
+            <li><a href="#" th:href="@{/user/change-password}">Zmień hasło</a></li>
+        </ul>
+    </div>
+</main>
 <footer th:replace="~{fragments::footer}">Footer</footer>
 </body>
 </html>
