--- a/src/main/resources/templates/all-users.html
+++ b/src/main/resources/templates/all-users.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pl" xmlns:th="http://www.thymeleaf.org"
 >
-<head th:replace="~{fragments::head(title ='Admin - lista promocji')}">
+<head th:replace="~{fragments::head(title ='Lista użytkowników')}">
     <meta charset="UTF-8">
-    <title>Lista-użytkowników</title>
+    <title>Lista użytkowników</title>
 </head>
 <body>
 <nav th:replace="~{fragments::login-navbar}">
@@ -26,7 +26,6 @@
             </tbody>
         </table>
     </div>
-    </table>
 </main>
 
 <footer th:replace="~{fragments::footer}"></footer>
