--- a/src/main/resources/templates/change-password-form.html
+++ b/src/main/resources/templates/change-password-form.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org"
->
-<head th:replace="~{fragments::head}">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments::head(title='Zmiana hasła')}">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Zmiana hasła</title>
 </head>
 <body>
 <nav th:replace="~{fragments::login-navbar}">
@@ -21,6 +20,5 @@
     <footer th:replace="~{fragments::footer}">
     </footer>
 </main>
-
 </body>
 </html>
