--- a/src/main/resources/templates/edit-promo-confirmation.html
+++ b/src/main/resources/templates/edit-promo-confirmation.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org"
->
-<head th:replace="~{fragments::head(title = 'Promocja - aktualizacja')}">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments::head(title = 'Edycja - potwierdzenie')}">
+    <title>Edycja - potwierdzenie</title>
 <body>
 <nav th:replace="~{fragments::login-navbar}"></nav>
-</div>
 <main>
     <div class="container">
         <div class="confirmation">
             <i class="fa-solid fa-face-smile fa-bounce fa-10x"></i>
-            <h2>Aktualizacja zapisana</h2>
+            <h2>Ogłoszenie zostało zaktualizaowane</h2>
         </div>
     </div>
 </main>
