--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments::head(title='DealSpotter - promocje')}">
-
+<head th:replace="~{fragments::head(title='DealSpotter')}">
 </head>
 <body>
 <nav th:replace="~{fragments::navbar}">
@@ -38,6 +37,5 @@
     </div>
     <footer th:replace="~{fragments::footer}"></footer>
 </main>
-
 </body>
 </html>
