--- a/src/main/resources/templates/registration-confirmation.html
+++ b/src/main/resources/templates/registration-confirmation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments::head(title = 'Rejestracja')}">
-
+<head th:replace="~{fragments::head(title = 'Rejestracja - potwierdzenie')}">
+    <title>Rejestracja - potwierdzenie</title>
 </head>
 <body>
 <nav th:replace="~{fragments::login-navbar}">
