--- a/src/main/resources/templates/save-promo.html
+++ b/src/main/resources/templates/save-promo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org"
->
-<head th:replace="~{fragments::head(title='Panel logowania')}">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments::head(title='Dodaj ofertę')}">
+    <title>Dodaj ogłoszenie</title>
 <body>
 <nav th:replace="~{fragments::login-navbar}">
 </nav>
@@ -45,7 +45,5 @@
 </main>
 <footer th:replace="~{fragments::footer}">
 </footer>
-
 </body>
-
 </html>
