--- a/src/main/resources/templates/save-promo-confirmation.html
+++ b/src/main/resources/templates/save-promo-confirmation.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="pl">
-<html lang="pl" xmlns:th="http://www.thymeleaf.org"
->
-<head th:replace="~{fragments::head(title = 'Promocja - aktualizacja')}">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments::head(title = 'Potwierdzenie')}">
 <body>
 <nav th:replace="~{fragments::login-navbar}"></nav>
 <main>
     <div class="container">
         <div class="confirmation">
             <i class="fa-solid fa-face-smile fa-bounce fa-10x"></i>
-            <h2>Promocja zapisana</h2>
+            <h2>Oferta zapisana</h2>
         </div>
-
     </div>
 </main>
-
-
 <footer th:replace="~{fragments::footer}"></footer>
 </body>
 </html>
