--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -11,7 +11,7 @@
         <h2 class="list-heading">Panel użytkownika</h2>
         <h3 class="list-heading" th:text="|Witaj ${user.firstName}|"></h3>
         <ul class="list-border">
-            <Li sec:authorize="hasRole('USER')"><a href="/user/promo/all">Twoje ogłoszenia</a></Li>
+            <Li sec:authorize="hasRole('USER')"><a href="/user/promo/all">Twoje oferty</a></Li>
             <li><a href="#" th:href="@{/user/change-password}">Zmień hasło</a></li>
         </ul>
     </div>
