--- a/src/main/resources/templates/promo-list.html
+++ b/src/main/resources/templates/promo-list.html
@@ -26,7 +26,7 @@
                 <td th:text="*{name}">Nazwa</td>
                 <td th:text="*{#temporals.format(localDateTime, 'dd-MM-yyyy HH:mm')}">Data dodania</td>
                 <td><a class="edit" th:href="|/promo/edit/*{id}|">Edytuj</a></td>
-                <td><a class="delete" th:href="|/admin/promo/delete/*{id}|">Usuń</a></td>
+                <td><a class="delete" th:href="|/user/promo/delete/*{id}|">Usuń</a></td>
             </tr>
             </tbody>
         </table>
