--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -178,7 +178,6 @@ div a span {
 }
 
 
-/* login */
 .form button {
     margin-top: 50px;
     width: 100%;
@@ -205,7 +204,7 @@ input::file-selector-button {
     display: block;
     height: 60px;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.07);
+    background-color: rgba(255, 255, 255, 0);
     border-radius: 3px;
     padding: 0 10px;
     margin-top: 8px;
@@ -222,13 +221,9 @@ input::file-selector-button {
 }
 
 .form form {
-    height: auto;
-    width: 600px;
-    background-color: rgba(255, 255, 255, 0.13);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 700px;
+    position: relative;
+    top: 75px;
     border-radius: 10px;
     backdrop-filter: blur(10px);
     border: 2px solid rgba(255, 255, 255, 0.1);
@@ -425,4 +420,32 @@ article:nth-child(odd) {
 
 article:nth-child(even) {
     background: lightgray;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+label[for="file_upload"] {
+    background-color: whitesmoke;
+    border-radius: 5px;
+    width: 100%;
+    color: #080710;
+    padding: 10px 15px;
+    cursor: pointer;
+    display: inline-block;
+    border: 2px solid black;
+    text-align: center;
+    height: 45px;
+}
+
+.category-form {
+    background-color: whitesmoke;
+    text-align: center;
+    border: 2px solid black;
+    width: 100%;
+    height: 45px;
+    padding: 10px 15px;
+    border-radius: 5px;
+    box-sizing: border-box;
 }
