--- a/src/main/resources/templates/edit-promo.html
+++ b/src/main/resources/templates/edit-promo.html
@@ -10,6 +10,7 @@
     <div class="form container">
         <form th:fragment="save-promo-form" method="post" th:action="@{/promo/update}" th:object="${promo}"
               enctype="multipart/form-data">
+            <h3>Edycja ogłoszenia</h3>
             <input th:field="*{id}" type="hidden">
             <label>
                 Nazwa
@@ -32,13 +33,18 @@
                 <input th:field="*{urlAddress}" type="url" required>
                 <p class="error" th:errors="*{urlAddress}"></p>
             </label>
-            <label th:field="*{category}" th:replace="~{fragments::category}">
-                Kategoria
-            </label>
             <label>
+                Wybierz kategorię
+                <select name="category" class="category-form">
+                    <option th:each="categoryType: ${T(pl.dk.dealspotter.category.CategoryType).values()}"
+                            th:text="${categoryType.description}">
+                        Wszystkie kategorie
+                    </option>
+                </select>
+            </label>
+            <label for="file_upload">
                 Dodaj zdjęcie
-                <input type="file" th:field="*{imageFilename}"/>
-                <p class="error" th:errors="*{imageFilename}"></p>
+                <input class="file_upload" id="file_upload" type="file" th:field="*{imageFilename}"/>
             </label>
             <button type="submit">Zapisz</button>
         </form>
