--- a/src/main/resources/templates/save-promo.html
+++ b/src/main/resources/templates/save-promo.html
@@ -5,10 +5,11 @@
 <body>
 <nav th:replace="~{fragments::login-navbar}">
 </nav>
-<main>
-    <div class="form container">
+<main class="container">
+    <div class="form">
         <form th:fragment="save-promo-form" method="post" th:action="@{/promo/save}" th:object="${promo}"
               enctype="multipart/form-data">
+            <h3>Dodaj ogłoszenie</h3>
             <label>
                 Nazwa
                 <input th:field="*{name}" type="text" required>
@@ -30,9 +31,14 @@
                 <input th:field="*{urlAddress}" type="url" required>
                 <p class="error" th:errors="*{urlAddress}">Błąd</p>
             </label>
-            <label for="category">
+            <label>
                 Wybierz kategorię
-                <input id="category" th:field="*{category}" th:replace="~{fragments::category}">
+                <select name="category" class="category-form">
+                    <option th:each="categoryType: ${T(pl.dk.dealspotter.category.CategoryType).values()}"
+                            th:text="${categoryType.description}">
+                        Wszystkie kategorie
+                    </option>
+                </select>
             </label>
             <label for="file_upload">
                 Dodaj zdjęcie
@@ -42,6 +48,7 @@
         </form>
     </div>
 </main>
+
 <footer th:replace="~{fragments::footer}">
 </footer>
 </body>
