--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="pl" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="~{fragments::head(title = 'Panel użytkownika')}">
+<head sec:authorize="hasRole('ADMIN')" th:replace="~{fragments::head(title = 'Panel administratora')}">
+    <title>Panel administratora</title>
+</head>
+<head sec:authorize="hasRole('USER')" th:replace="~{fragments::head(title = 'Panel użytkownika')}">
+    <title>Panel użytkownika</title>
 </head>
 <body>
 <main>
     <nav th:replace="~{fragments::login-navbar}">
     </nav>
     <div class="container">
-        <h2 class="list-heading">Panel użytkownika</h2>
+        <h2 sec:authorize="hasRole('ADMIN')" class="list-heading">Panel administratora</h2>
+        <h2 sec:authorize="hasRole('USER')" class="list-heading">Panel użytkownika</h2>
         <h3 class="list-heading" th:text="|Witaj ${user.firstName}|"></h3>
         <ul class="list-border">
+            <li sec:authorize="hasRole('ADMIN')"><a href="/user/all-users">Użytkownicy</a></li>
+            <Li sec:authorize="hasRole('ADMIN')"><a href="/user/promo/all">Wszystkie oferty</a></Li>
             <Li sec:authorize="hasRole('USER')"><a href="/user/promo/all">Twoje oferty</a></Li>
             <li><a href="#" th:href="@{/user/change-password}">Zmień hasło</a></li>
         </ul>
     </div>
 </main>
+
 <footer th:replace="~{fragments::footer}">Footer</footer>
 </body>
-</html>
