--- a/src/main/resources/templates/promo-list.html
+++ b/src/main/resources/templates/promo-list.html
@@ -15,7 +15,7 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Nazwa</th>
-                <th scope="col">Data dodania</th>
+                <th scope="col">Dodano</th>
                 <th scope="col">Edycja</th>
                 <th scope="col">Usuwanie</th>
             </tr>
@@ -24,7 +24,7 @@
             <tr th:each="promo: ${promoList}" th:object="${promo}">
                 <td th:text="*{id}">1</td>
                 <td th:text="*{name}">Nazwa</td>
-                <td th:text="*{#temporals.format(localDateTime, 'dd-MM-yyyy HH:mm')}">Data dodania</td>
+                <td th:text="*{#temporals.format(added, 'dd-MM-yyyy HH:mm')}">Data dodania</td>
                 <td><a class="edit" th:href="|/promo/edit/*{id}|">Edytuj</a></td>
                 <td><a class="delete" th:href="|/user/promo/delete/*{id}|">Usuń</a></td>
             </tr>
