--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
             <section class="description">
                 <h2 class="discovery-header" th:text="*{name}"></h2>
                 <p class="discovery-details"
-                   th:text="|Dodane prze: *{userDto.firstName},data dodania: *{#temporals.format(localDateTime, 'dd-MM-yyyy HH:mm')}|">
+                   th:text="|Dodał: *{userDto.firstName},data dodania: *{#temporals.format(getAdded, 'dd-MM-yyyy HH:mm')}|">
                     Dodane przez: Mietek, data dodania: 22/01/2015</p>
                 <a href="#" class="discovery-link" th:href="*{urlAddress}">Idź do okazji</a>
                 <p th:text="*{description}">cursus in hac habitasse platea dictumst quisque sagittis purus sit amet
